sample/codepkg/objects/Pass__c.object
<CustomObject>
    <fields>
        <fullName>Conference__c</fullName>
        <label>Conference</label>
        <referenceTo>Conference__c</referenceTo>
        <relationshipLabel>Passes</relationshipLabel>
        <relationshipName>Passes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <formula>Conference__r.Price__c  *  Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DiscountAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Pass</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>full</fullName>
        <active>true</active>
        <errorConditionFormula>Conference__r.Total_Registrations__c  &lt;=   Conference__r.Completed_registrations__c</errorConditionFormula>
        <errorMessage>No more passes left</errorMessage>
    </validationRules>
</CustomObject>